serve footer logos from allas

--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,8 +1,8 @@
 <img src="https://mirrors.creativecommons.org/presskit/buttons/88x31/png/by-sa.png" width=170>
 &nbsp;
-<img src="/assets/images/logo.png" width="100">
+<img src="https://a3s.fi/img/logo.png" width="100">
 &nbsp;
-<img src="/assets/images/eurocc.png" width="60">
+<img src="https://a3s.fi/img/eurocc.png" width="60">
 
 {%- if site.footer_content -%}
     <p class="text-small text-grey-dk-100 mb-0">{{ site.footer_content }}</p>
