--- a/_includes/matomo.html
+++ b/_includes/matomo.html
@@ -5,9 +5,9 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//docs-design-matomo.rahtiapp.fi/";
+    var u="//{{ site.matomo.url }}/";
     _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '4']);
+    _paq.push(['setSiteId', '{{ site.matomo.site_id }}']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
